fixed meeting routes and added third party api response
