# schemas/openapi.yaml
@@ -267,135 +267,180 @@ paths:
   #       '404':
   #         description: Not found
 
-#   /v2/announcements:
-#     summary: Rappresents Announcement posts on the database
-#     description: >
-#       This resource represents an annoucement post in the system.
-#       Each post is identified by a numeric value `id`.
-#     get:
-#       tags:
-#         - Announcement
-#       description:
-#         Get annoucement by id.
-#       responses:
-#         '200':
-#           description: View of announcement record
-#           content:
-#             application/json:
-#               schema:
-#                 $ref: ./announcement.json#/definitions/announcementView
-#         '401':
-#           description: Non-admin users can only view their own record
-#         '404':
-#           description: Not found
+  /v2/announcements/{id}:
+    parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        required: true
+        description: Numeric id of the announcement post
+    get:
+      tags:
+        - Announcement
+      description:
+        Get announcement by id.
+      responses:
+        '200':
+          description: View of single announcement record
+          content:
+            application/json:
+              schema:
+                $ref: ./announcement.json#/definitions/announcementView
+        '404':
+          description: Not found
+        '500':
+          description: Internal server error
+
+  /v2/announcements:
+    summary: Rappresents Announcement posts on the database
+    description: >
+      This resource represents an annoucement post in the system.
+      Each post is identified by a numeric value `id`.
+    get:
+      tags:
+        - Announcement
+      description:
+        Get all annoucements.
+      responses:
+        '200':
+          description: View of announcement record
+          content:
+            application/json:
+              schema:
+                $ref: ./announcement.json#/definitions/announcementList
+        '404':
+          description: Not found
     
-#     post:
-#       tags:
-#         - Announcement
-#       description:
-#         Create a new Announcement post.
-#       requestBody:
-#         description: All new user data.
-#         required: true
-#         content:
-#           application/json:
-#             #schema:
-#               #$ref: ./announcement.json#/definitions/announcement
-#       responses:
-#         '201':
-#           description: Announcement created
-#           #content:
-#             #application/json:
-#               #schema:
-#                 #$ref: ./announcement.json#/definitions/announcementUpdated
+    post:
+      tags:
+        - Announcement
+      description:
+        Create a new Announcement post.
+      requestBody:
+        description: All new announcement data.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ./announcement.json#/definitions/announcementUpdated
+      responses:
+        '201':
+          description: Announcement created
+          content:
+            application/json:
+              schema:
+                $ref: ./announcement.json#/definitions/announcementUpdated
+        '403':
+          description:
 
-#     put:
-#       tags:
-#         - Announcement
-#       description:
-#         Update user by id.
-#       requestBody:
-#         description: Update a visible property or the password.
-#         required: true
-#         #content:
-#           #application/json:
-#             #schema:
-#               #$ref: .announcement.json#/definitions/announcementUpdate
-#       responses:
-#         '200':
-#           description: Confirmation and link to record.
-#           #content:
-#             #application/json:
-#               #schema:
-#                 #$ref: ./announcement.json#/definitions/announcementUpdated
-#         '404':
-#           description: Not found
+    put:
+      tags:
+        - Announcement
+      description:
+        Update announcement by id.
+      requestBody:
+        description: Update a visible property of the announcement post.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: ./announcement.json#/definitions/announcementUpdated
+      responses:
+        '200':
+          description: Confirmation and link to record.
+          content:
+            application/json:
+              schema:
+                $ref: ./announcement.json#/definitions/announcementUpdated
+        '403':
+          description: Missing permissions.
+        '404':
+          description: Not found.
+        '500':
+          description: Internal Server Error.
 
+    delete:
+      tags:
+        - Announcement
+      description:
+        Delete Announcement by id.
+      responses:
+        '200':
+          description: Confirmation of deletion.
+          content:
+            application/json:
+              schema:
+                $ref: ./announcement.json#/definitions/announcementDeleted
+        '401':
+          description: Only admin users can delete Announcement
+        '404':
+          description: Not found
 
-#   /v2/meetings:
+  # /v2/meetings:
 
-#     summary: Rappresents Meetings posts on the database
-#     description: >
-#       This resource represents an issue post in the system.
-#       Each post is identified by a numeric `id`.
-#     get:
-#       tags:
-#         - Meetings
-#       description:
-#         Get user by id.
-#       responses:
-#         '200':
-#           description: View of user record
-#           content:
-#             application/json:
-#               schema:
-#                 $ref: ./meetings.json#/definitions/meetings
-#         '401':
-#           description: Non-admin users can only view their own record
-#         '404':
-#           description: Not found
+  #   summary: Rappresents Meetings posts on the database
+  #   description: >
+  #     This resource represents an issue post in the system.
+  #     Each post is identified by a numeric `id`.
+  #   get:
+  #     tags:
+  #       - Meetings
+  #     description:
+  #       Get user by id.
+  #     responses:
+  #       '200':
+  #         description: View of user record
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: ./meetings.json#/definitions/meetings
+  #       '401':
+  #         description: Non-admin users can only view their own record
+  #       '404':
+  #         description: Not found
   
-#     post:
-#       tags:
-#         - Meetings
-#       description:
-#         Create a new user account.
-#       requestBody:
-#         description: All new user data.
-#         required: true
-#         content:
-#           application/json:
-#             schema:
-#               $ref: ./meetings.json#/definitions/meetings
-#       responses:
-#         '201':
-#           description: meetings created
-#           content:
-#             application/json:
-#               schema:
-#                 $ref: ./meetings.json#/definitions/meetings
+  #   post:
+  #     tags:
+  #       - Meetings
+  #     description:
+  #       Create a new user account.
+  #     requestBody:
+  #       description: All new user data.
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: ./meetings.json#/definitions/meetings
+  #     responses:
+  #       '201':
+  #         description: meetings created
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: ./meetings.json#/definitions/meetings
 
-#     put:
-#       tags:
-#         - Meetings
-#       description:
-#         Update meetings by id.
-#       requestBody:
-#         description: Update a visible property or the password.
-#         required: true
-#         content:
-#           application/json:
-#             schema:
-#               $ref: ./meetings.json#/definitions/meetingsUpdate
-#       responses:
-#         '200':
-#           description: Confirmation and link to record.
-#           content:
-#             application/json:
-#               schema:
-#                 $ref: ./meetings.json#/definitions/meetingsUpdated
-#         '404':
-#           description: Not found
+  #   put:
+  #     tags:
+  #       - Meetings
+  #     description:
+  #       Update meetings by id.
+  #     requestBody:
+  #       description: Update a visible property or the password.
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: ./meetings.json#/definitions/meetingsUpdate
+  #     responses:
+  #       '200':
+  #         description: Confirmation and link to record.
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: ./meetings.json#/definitions/meetingsUpdated
+  #       '404':
+  #         description: Not found
 
 
 # examples:
